<resources>
    <string name="app_name">Organized</string>
    <string name="event_feed_menu_item_title">Event Feed</string>
    <string name="calendar_menu_item_title">Calendar</string>
    <string name="customize">Customize</string>
    <string name="show_dialog">Show_dialog</string>
    <string name="undo">Undo</string>
    <string name="event_detail_question">Accept the event?</string>
    <string name="event_detail_startdate">Date</string>
    <string name="event_detail_enddate">Enddatum</string>
    <string name="event_detail_accept">Accept</string>
    <string name="event_detail_deny">Deny</string>
    <string name="event_detail_eventtitle">Title</string>
    <string name="title_edit_hint">Enter title</string>
    <string name="title_edit_desc">Enter description</string>
    <string name="title_edit_end">Ending time</string>
    <string name="title_edit_start">Starting time</string>
    <string name="new_event_dialog_duration">Event duration</string>
    <string name="new_event_starting_date">Starting date</string>
    <string name="new_event_desc">Description</string>
    <string name="new_event_title">New Events</string>
    <string name="new_event_dialog_hour">h</string>
    <string name="new_event_dialog_minute">min</string>
    <string name="event_detail_description">Description</string>
    <string name="event_detail_event_collisions_hint">Event collisions</string>
    <string name="event_detail_event_collisions">No colliding events</string>
    <string name="calendar_title">Calendar</string>
    <string name="current_event_title">Current Events</string>
    <string name="new_event_location">Location</string>
    <string name="location_edit_hint">Enter location</string>
    <string name="link_signup"><u>No account yet? Create one</u></string>
    <string name="link_login"><u>Already a member? Login</u></string>
    <string name="btn_login">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_hint">Email</string>
    <string name="login_logo_desc">Organized logo</string>
    <string name="btn_signup">Ceate Account</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_name_hint">Name</string>
    <string name="empty_feed_message">No new events available.</string>
    <string name="config_ip_hint">Ip address</string>
    <string name="config_client_id_hint">Client id</string>
    <string name="config_client_secret_hint">Client secret</string>
    <string name="btn_config">Submit config data</string>
    <string name="delete_btn_desc">Delete button for a single event</string>
    <string name="event_feed_decline_btn_desc">Decline button for an event ot the event feed</string>
    <string name="event_feed_accept_btn_desc">Accept button for an event of the event feed</string>
    <string name="new_event_btn_create">Create</string>
    <string name="new_event_btn_cancel">Cancle</string>
    <string name="calendar_menu_item_log_out">Log out</string>
    <string name="menu_item_log_out">Log out</string>
</resources>
