<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_log_out"
        android:icon="@android:drawable/arrow_down_float"
        android:title="@string/menu_item_log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/activity_event_feed"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/event_feed_menu_item_title"
        app:showAsAction="ifRoom"
        android:checked="false"/>
    <item
        android:id="@+id/activity_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar_menu_item_title"
        app:showAsAction="ifRoom"
        android:checked="true"/>
</menu>